Now the remote is valid xhtml strict
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6272 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Remote/chs/home.htm
+++ b/Remote/chs/home.htm
@@ -15,42 +15,46 @@
 			<div style="float: right; width: 40em;">
 				<h3>开始下载:</h3>
 				<div style="text-align: right;">
-				<form method="get" action="newsearch">
-					<label>快速搜索:</label>
-					<input type="text" name="search" size="20" />
-					<select name="schema">
-						<option value="">任何文件类型</option>
-						<option value="http://www.shareaza.com/schemas/application.xsd">程序</option>
-						<option value="http://www.limewire.com/schemas/audio.xsd">音频</option>
-						<option value="http://www.shareaza.com/schemas/bittorent.xsd">BitTorrent</option>
-						<option value="http://www.limewire.com/schemas/book.xsd">书籍</option>
-						<option value="http://www.shareaza.com/schemas/collection.xsd">Collection</option>
-						<option value="http://www.shareaza.com/schemas/image.xsd">图片</option>
-						<option value="http://www.shareaza.com/schemas/presentation.xsd">介绍</option>
-						<option value="http://www.shareaza.com/schemas/rom.xsd">ROM 镜像</option>
-						<option value="http://www.shareaza.com/schemas/shareazaSkin.xsd">皮肤</option>
-						<option value="http://www.shareaza.com/schemas/sourceCode.xsd">源代码</option>
-						<option value="http://www.shareaza.com/schemas/spreadsheet.xsd">电子表格</option>
-						<option value="http://www.shareaza.com/schemas/subtitle.xsd">字幕</option>
-						<option value="http://www.limewire.com/schemas/video.xsd">视频</option>
-						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">字符处理</option>
-					</select>
-					<input type="submit" value="开始" />
-				</form><br />
-				<form method="get" action="newdownload">
-					<label>磁力/种子下载:</label>
-					<input type="text" name="uri" size="35" />
-					<input type="submit" value="开始" />
-				</form>
+					<form method="get" action="newsearch">
+						<div>
+							<label>快速搜索:</label>
+							<input type="text" name="search" size="20" />
+							<select name="schema">
+								<option value="">任何文件类型</option>
+								<option value="http://www.shareaza.com/schemas/application.xsd">程序</option>
+								<option value="http://www.limewire.com/schemas/audio.xsd">音频</option>
+								<option value="http://www.shareaza.com/schemas/bittorent.xsd">BitTorrent</option>
+								<option value="http://www.limewire.com/schemas/book.xsd">书籍</option>
+								<option value="http://www.shareaza.com/schemas/collection.xsd">Collection</option>
+								<option value="http://www.shareaza.com/schemas/image.xsd">图片</option>
+								<option value="http://www.shareaza.com/schemas/presentation.xsd">介绍</option>
+								<option value="http://www.shareaza.com/schemas/rom.xsd">ROM 镜像</option>
+								<option value="http://www.shareaza.com/schemas/shareazaSkin.xsd">皮肤</option>
+								<option value="http://www.shareaza.com/schemas/sourceCode.xsd">源代码</option>
+								<option value="http://www.shareaza.com/schemas/spreadsheet.xsd">电子表格</option>
+								<option value="http://www.shareaza.com/schemas/subtitle.xsd">字幕</option>
+								<option value="http://www.limewire.com/schemas/video.xsd">视频</option>
+								<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">字符处理</option>
+							</select>
+							<input type="submit" value="开始" />
+						</div>
+					</form><br/>
+					<form method="get" action="newdownload">
+						<div>
+							<label>磁力/种子下载:</label>
+							<input type="text" name="uri" size="35" />
+							<input type="submit" value="开始" />
+						</div>
+					</form>
 				</div>
 			</div>
 			<h3>可用链接:</h3>
 			<ul>
-				<li><a href="http://www.peerweb.org/" target="_blank">Peerweb.org</a></li>
-				<li><a href="http://www.freebase.be/" target="_blank">Freebase.be</a></li>
-				<li><a href="http://www.g24u.net/" target="_blank">g24u.net</a></li>
-				<li><a href="http://www.bittorrent.com/" target="_blank">Bittorrent.com</a></li>
-				<li><a href="http://www.legaltorrents.com/" target="_blank">LegalTorrents.com</a></li>
-				<li><a href="http://content.emule-project.net/" target="_blank">eMule content DB</a></li>
+				<li><a href="http://www.peerweb.org/">Peerweb.org</a></li>
+				<li><a href="http://www.freebase.be/">Freebase.be</a></li>
+				<li><a href="http://www.g24u.net/">g24u.net</a></li>
+				<li><a href="http://www.bittorrent.com/">Bittorrent.com</a></li>
+				<li><a href="http://www.legaltorrents.com/">LegalTorrents.com</a></li>
+				<li><a href="http://content.emule-project.net/">eMule content DB</a></li>
 			</ul>
 		</div>
