--- a/Remote/lt/home.htm
+++ b/Remote/lt/home.htm
@@ -15,42 +15,46 @@
 			<div style="float: right; width: 40em;">
 				<h3>Pradėti siųstis:</h3>
 				<div style="text-align: right;">
-				<form method="get" action="newsearch">
-					<label>Greita paieška:</label>
-					<input type="text" name="search" size="20" />
-					<select name="schema">
-						<option value="">Bet kokio tipo</option>
-						<option value="http://www.shareaza.com/schemas/application.xsd">Programa</option>
-						<option value="http://www.limewire.com/schemas/audio.xsd">Audio</option>
-						<option value="http://www.shareaza.com/schemas/bittorent.xsd">BitTorrent</option>
-						<option value="http://www.limewire.com/schemas/book.xsd">Knyga</option>
-						<option value="http://www.shareaza.com/schemas/collection.xsd">Rinkinys</option>
-						<option value="http://www.shareaza.com/schemas/image.xsd">Paveikslėlis</option>
-						<option value="http://www.shareaza.com/schemas/presentation.xsd">Pateiktis</option>
-						<option value="http://www.shareaza.com/schemas/rom.xsd">ROM atvaizdis</option>
-						<option value="http://www.shareaza.com/schemas/shareazaSkin.xsd">Apvalkalas</option>
-						<option value="http://www.shareaza.com/schemas/sourceCode.xsd">Pirminis kodas</option>
-						<option value="http://www.shareaza.com/schemas/spreadsheet.xsd">Skaičiuoklė</option>
-						<option value="http://www.shareaza.com/schemas/subtitle.xsd">Subtitrai</option>
-						<option value="http://www.limewire.com/schemas/video.xsd">Vaizdo įrašai</option>
-						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Dokumentas</option>
-					</select>
-					<input type="submit" value="Pirmyn" />
-				</form><br />
-				<form method="get" action="newdownload">
-					<label>Magnet/Torrent atsisiuntimas:</label>
-					<input type="text" name="uri" size="35" />
-					<input type="submit" value="Pirmyn" />
-				</form>
+					<form method="get" action="newsearch">
+						<div>
+							<label>Greita paieška:</label>
+							<input type="text" name="search" size="20" />
+							<select name="schema">
+								<option value="">Bet kokio tipo</option>
+								<option value="http://www.shareaza.com/schemas/application.xsd">Programa</option>
+								<option value="http://www.limewire.com/schemas/audio.xsd">Audio</option>
+								<option value="http://www.shareaza.com/schemas/bittorent.xsd">BitTorrent</option>
+								<option value="http://www.limewire.com/schemas/book.xsd">Knyga</option>
+								<option value="http://www.shareaza.com/schemas/collection.xsd">Rinkinys</option>
+								<option value="http://www.shareaza.com/schemas/image.xsd">Paveikslėlis</option>
+								<option value="http://www.shareaza.com/schemas/presentation.xsd">Pateiktis</option>
+								<option value="http://www.shareaza.com/schemas/rom.xsd">ROM atvaizdis</option>
+								<option value="http://www.shareaza.com/schemas/shareazaSkin.xsd">Apvalkalas</option>
+								<option value="http://www.shareaza.com/schemas/sourceCode.xsd">Pirminis kodas</option>
+								<option value="http://www.shareaza.com/schemas/spreadsheet.xsd">Skaičiuoklė</option>
+								<option value="http://www.shareaza.com/schemas/subtitle.xsd">Subtitrai</option>
+								<option value="http://www.limewire.com/schemas/video.xsd">Vaizdo įrašai</option>
+								<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Dokumentas</option>
+							</select>
+							<input type="submit" value="Pirmyn" />
+						</div>
+					</form><br/>
+					<form method="get" action="newdownload">
+						<div>
+							<label>Magnet/Torrent atsisiuntimas:</label>
+							<input type="text" name="uri" size="35" />
+							<input type="submit" value="Pirmyn" />
+						</div>
+					</form>
 				</div>
 			</div>
 			<h3>Naudingos nuorodos:</h3>
 			<ul>
-				<li><a href="http://www.peerweb.org/" target="_blank">Peerweb.org</a></li>
-				<li><a href="http://www.freebase.be/" target="_blank">Freebase.be</a></li>
-				<li><a href="http://www.g24u.net/" target="_blank">g24u.net</a></li>
-				<li><a href="http://www.bittorrent.com/" target="_blank">Bittorrent.com</a></li>
-				<li><a href="http://www.legaltorrents.com/" target="_blank">LegalTorrents.com</a></li>
-				<li><a href="http://content.emule-project.net/" target="_blank">eMule content DB</a></li>
+				<li><a href="http://www.peerweb.org/">Peerweb.org</a></li>
+				<li><a href="http://www.freebase.be/">Freebase.be</a></li>
+				<li><a href="http://www.g24u.net/">g24u.net</a></li>
+				<li><a href="http://www.bittorrent.com/">Bittorrent.com</a></li>
+				<li><a href="http://www.legaltorrents.com/">LegalTorrents.com</a></li>
+				<li><a href="http://content.emule-project.net/">eMule content DB</a></li>
 			</ul>
 		</div>
