--- a/Remote/it/home.htm
+++ b/Remote/it/home.htm
@@ -15,42 +15,46 @@
 			<div style="float: right; width: 40em;">
 				<h3>Inizia il download:</h3>
 				<div style="text-align: right;">
-				<form method="get" action="newsearch">
-					<label>Ricerca veloce:</label>
-					<input type="text" name="search" size="20" />
-					<select name="schema">
-						<option value="">Qualsiasi file</option>
-						<option value="http://www.shareaza.com/schemas/application.xsd">Applicazione</option>
-						<option value="http://www.limewire.com/schemas/audio.xsd">Audio</option>
-						<option value="http://www.shareaza.com/schemas/bittorent.xsd">BitTorrent</option>
-						<option value="http://www.limewire.com/schemas/book.xsd">Libro</option>
-						<option value="http://www.shareaza.com/schemas/collection.xsd">Collezione</option>
-						<option value="http://www.shareaza.com/schemas/image.xsd">Immagine</option>
-						<option value="http://www.shareaza.com/schemas/presentation.xsd">Presentazione</option>
-						<option value="http://www.shareaza.com/schemas/rom.xsd">Immagine della ROM</option>
-						<option value="http://www.shareaza.com/schemas/shareazaSkin.xsd">Skin</option>
-						<option value="http://www.shareaza.com/schemas/sourceCode.xsd">Codice sorgente</option>
-						<option value="http://www.shareaza.com/schemas/spreadsheet.xsd">Foglio elettronico</option>
-						<option value="http://www.shareaza.com/schemas/subtitle.xsd">Sottotitoli</option>
-						<option value="http://www.limewire.com/schemas/video.xsd">Video</option>
-						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Documento di testo</option>
-					</select>
-					<input type="submit" value="Vai" />
-				</form><br />
-				<form method="get" action="newdownload">
-					<label>Scarica magnet/torrent:</label>
-					<input type="text" name="uri" size="35" />
-					<input type="submit" value="Vai" />
-				</form>
+					<form method="get" action="newsearch">
+						<div>
+							<label>Ricerca veloce:</label>
+							<input type="text" name="search" size="20" />
+							<select name="schema">
+								<option value="">Qualsiasi file</option>
+								<option value="http://www.shareaza.com/schemas/application.xsd">Applicazione</option>
+								<option value="http://www.limewire.com/schemas/audio.xsd">Audio</option>
+								<option value="http://www.shareaza.com/schemas/bittorent.xsd">BitTorrent</option>
+								<option value="http://www.limewire.com/schemas/book.xsd">Libro</option>
+								<option value="http://www.shareaza.com/schemas/collection.xsd">Collezione</option>
+								<option value="http://www.shareaza.com/schemas/image.xsd">Immagine</option>
+								<option value="http://www.shareaza.com/schemas/presentation.xsd">Presentazione</option>
+								<option value="http://www.shareaza.com/schemas/rom.xsd">Immagine della ROM</option>
+								<option value="http://www.shareaza.com/schemas/shareazaSkin.xsd">Skin</option>
+								<option value="http://www.shareaza.com/schemas/sourceCode.xsd">Codice sorgente</option>
+								<option value="http://www.shareaza.com/schemas/spreadsheet.xsd">Foglio elettronico</option>
+								<option value="http://www.shareaza.com/schemas/subtitle.xsd">Sottotitoli</option>
+								<option value="http://www.limewire.com/schemas/video.xsd">Video</option>
+								<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Documento di testo</option>
+							</select>
+							<input type="submit" value="Vai" />
+						</div>
+					</form><br/>
+					<form method="get" action="newdownload">
+						<div>
+							<label>Scarica magnet/torrent:</label>
+							<input type="text" name="uri" size="35" />
+							<input type="submit" value="Vai" />
+						</div>
+					</form>
 				</div>
 			</div>
 			<h3>Link utili:</h3>
 			<ul>
-				<li><a href="http://www.peerweb.org/" target="_blank">Peerweb.org</a></li>
-				<li><a href="http://www.freebase.be/" target="_blank">Freebase.be</a></li>
-				<li><a href="http://www.g24u.net/" target="_blank">g24u.net</a></li>
-				<li><a href="http://www.bittorrent.com/" target="_blank">Bittorrent.com</a></li>
-				<li><a href="http://www.legaltorrents.com/" target="_blank">LegalTorrents.com</a></li>
-				<li><a href="http://content.emule-project.net/" target="_blank">eMule content DB</a></li>
+				<li><a href="http://www.peerweb.org/">Peerweb.org</a></li>
+				<li><a href="http://www.freebase.be/">Freebase.be</a></li>
+				<li><a href="http://www.g24u.net/">g24u.net</a></li>
+				<li><a href="http://www.bittorrent.com/">Bittorrent.com</a></li>
+				<li><a href="http://www.legaltorrents.com/">LegalTorrents.com</a></li>
+				<li><a href="http://content.emule-project.net/">eMule content DB</a></li>
 			</ul>
 		</div>
