--- a/Remote/pt-br/home.htm
+++ b/Remote/pt-br/home.htm
@@ -15,42 +15,46 @@
 			<div style="float: right; width: 40em;">
 				<h3>Iniciar o Download:</h3>
 				<div style="text-align: right;">
-				<form method="get" action="newsearch">
-					<label>Busca rápida</label>
-					<input type="text" name="search" size="20" />
-					<select name="schema">
-						<option value="">Qualquer arquivo</option>
-						<option value="http://www.shareaza.com/schemas/application.xsd">Aplicação</option>
-						<option value="http://www.limewire.com/schemas/audio.xsd">Áudio</option>
-						<option value="http://www.shareaza.com/schemas/bittorent.xsd">Bit Torrent</option>
-						<option value="http://www.limewire.com/schemas/book.xsd">Livro</option>
-						<option value="http://www.shareaza.com/schemas/collection.xsd">Coleção</option>
-						<option value="http://www.shareaza.com/schemas/image.xsd">Imagem</option>
-						<option value="http://www.shareaza.com/schemas/presentation.xsd">Apresentação</option>
-						<option value="http://www.shareaza.com/schemas/rom.xsd">Imagem de ROM</option>
-						<option value="http://www.shareaza.com/schemas/shareazaSkin.xsd">Skin</option>
-						<option value="http://www.shareaza.com/schemas/sourceCode.xsd">Código Fonte</option>
-						<option value="http://www.shareaza.com/schemas/spreadsheet.xsd">Spreadsheet</option>
-						<option value="http://www.shareaza.com/schemas/subtitle.xsd">Legenda</option>
-						<option value="http://www.limewire.com/schemas/video.xsd">Vídeo</option>
-						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Processamento de Palavras</option>
-					</select>
-					<input type="submit" value="Ir" />
-				</form><br />
-				<form method="get" action="newdownload">
-					<label>Baixar Magnet/Torrent</label>
-					<input type="text" name="uri" size="35" />
-					<input type="submit" value="Ir" />
-				</form>
+					<form method="get" action="newsearch">
+						<div>
+							<label>Busca rápida</label>
+							<input type="text" name="search" size="20" />
+							<select name="schema">
+								<option value="">Qualquer arquivo</option>
+								<option value="http://www.shareaza.com/schemas/application.xsd">Aplicação</option>
+								<option value="http://www.limewire.com/schemas/audio.xsd">Áudio</option>
+								<option value="http://www.shareaza.com/schemas/bittorent.xsd">Bit Torrent</option>
+								<option value="http://www.limewire.com/schemas/book.xsd">Livro</option>
+								<option value="http://www.shareaza.com/schemas/collection.xsd">Coleção</option>
+								<option value="http://www.shareaza.com/schemas/image.xsd">Imagem</option>
+								<option value="http://www.shareaza.com/schemas/presentation.xsd">Apresentação</option>
+								<option value="http://www.shareaza.com/schemas/rom.xsd">Imagem de ROM</option>
+								<option value="http://www.shareaza.com/schemas/shareazaSkin.xsd">Skin</option>
+								<option value="http://www.shareaza.com/schemas/sourceCode.xsd">Código Fonte</option>
+								<option value="http://www.shareaza.com/schemas/spreadsheet.xsd">Spreadsheet</option>
+								<option value="http://www.shareaza.com/schemas/subtitle.xsd">Legenda</option>
+								<option value="http://www.limewire.com/schemas/video.xsd">Vídeo</option>
+								<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Processamento de Palavras</option>
+							</select>
+							<input type="submit" value="Ir" />
+						</div>
+					</form><br/>
+					<form method="get" action="newdownload">
+						<div>
+							<label>Baixar Magnet/Torrent</label>
+							<input type="text" name="uri" size="35" />
+							<input type="submit" value="Ir" />
+						</div>
+					</form>
 				</div>
 			</div>
 			<h3>Links Úteis:</h3>
 			<ul>
-				<li><a href="http://www.peerweb.org/" target="_blank">Peerweb.org</a></li>
-				<li><a href="http://www.freebase.be/" target="_blank">Freebase.be</a></li>
-				<li><a href="http://www.g24u.net/" target="_blank">g24u.net</a></li>
-				<li><a href="http://www.bittorrent.com/" target="_blank">Bittorrent.com</a></li>
-				<li><a href="http://www.legaltorrents.com/" target="_blank">LegalTorrents.com</a></li>
-				<li><a href="http://content.emule-project.net/" target="_blank">eMule content DB</a></li>
+				<li><a href="http://www.peerweb.org/">Peerweb.org</a></li>
+				<li><a href="http://www.freebase.be/">Freebase.be</a></li>
+				<li><a href="http://www.g24u.net/">g24u.net</a></li>
+				<li><a href="http://www.bittorrent.com/">Bittorrent.com</a></li>
+				<li><a href="http://www.legaltorrents.com/">LegalTorrents.com</a></li>
+				<li><a href="http://content.emule-project.net/">eMule content DB</a></li>
 			</ul>
 		</div>
