replaced single cell header table with div
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6423 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Res/About.htm
+++ b/shareaza/Res/About.htm
@@ -79,11 +79,9 @@ table.nodeinfo tr td {
 </head>
 <body>
 
-<table width="100%" border="0" cellpadding="0" cellspacing="0" class="headerborder" style="background-image:url(/remote/header_2.png)">
-  <tr>
-	<td><img src="/remote/header_1.png" width="624" height="172" alt="Shareaza header" /></td>
-  </tr>
-</table>
+<div class="headerborder" style="width: 100%; background-image:url(/remote/header_2.png);">
+  <img src="/remote/header_1.png" width="624" height="172" alt="Shareaza header" />
+</div>
 
 <div align="center"><br />
   <table width="800" border="0" cellspacing="4" cellpadding="6"> <!-- NODE BOX START-->
