--- a/shareaza/Res/Browser.htm
+++ b/shareaza/Res/Browser.htm
@@ -1,73 +1,87 @@
 403 Please Share
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/2002/REC-xhtml1-20020801/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
  <title>Please Share: Shareaza</title>
- <style> a { color: black; text-decoration: none; } a:hover { color: blue; text-decoration: underline; }</style>
+ <style type="text/css">
+html, body {
+	margin: 0px;
+	background-color: white;
+	height: 100%;
+	width: 100%;
+	font-family: Verdana;
+	}
+a {
+	color: black;
+	text-decoration: none;
+	}
+a:hover {
+	color: blue;
+	text-decoration: underline;
+	}
+.header {
+	border: 0px;
+	border-bottom: 1px solid black;
+	background: #BE0000;
+	text-align: left;
+	font-weight: bold;
+	color: yellow;
+	}
+.footer {
+	border: 0px;
+	border-top: 1px solid black;
+	background: #BE0000;
+	text-align: right;
+	font-size: 10px;
+	color: maroon;
+	}
+ </style>
 </head>
-<body bgcolor="white" link="black" vlink="black" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<body>
 
-<table width="100%" height="100%" cellPadding="0" cellSpacing="0">
+<table style="height: 100%; width: 100%;" cellspacing="0">
 
-<tr height="48">
-<td bgcolor="#BE0000" align="left" valign="center" style="border-style: solid; border-width: 0px 0px 1px 0px; border-color: black;">
-	<a href="http://shareaza.sourceforge.net/">
-	<img src="http://shareaza.sourceforge.net/images/barlogo.gif" width="240" height="48" border="0" align="absmiddle"></a>
-	<font face="Verdana" color="yellow"><b>Please Share</b></font>
-</td>
+<tr style="height: 48px;">
+	<td class="header">
+		<a href="http://shareaza.sourceforge.net/"><img src="http://shareaza.sourceforge.net/images/barlogo.gif" width="240" height="48" border="0" align="middle" alt="SHAREAZA" /></a>
+		<span style="position: relative; top: 3px;">Please Share</span>
+	</td>
 </tr>
 
 <tr>
 <td valign="top">
+	<br/>
+	<table width="100%">
+		<tr>
+			<td style="font-size: 13px; padding-left: 35px; padding-right: 35px;">
+				<h3>Please Share</h3>
+				<p>
+					Sorry, this server has disabled serving files to web browsers. Web browsers do not contribute content to the P2P network, and place an unequal burden available upload resources.
+				</p>
 
-<br>
+				<p>
+					It's easy to gain access to the complete content of the P2P network - simply download one of the many popular P2P clients.
+				</p>
+				<br/>
+				<h3>Get Shareaza Now</h3>
+				<p>
+					Shareaza is the most powerful and feature-rich P2P client for Windows. And it's completely free. No ads, no spyware, no guilting you to upgrade to a commercial version.
+				</p>
 
-<table width="100%">
-<td width="32">&nbsp;</td>
-<td>
-<font face="Verdana" size="2">
-
-<h3>Please Share</h3>
-
-<p>
-Sorry, this server has disabled serving files to web browsers. Web browsers
-do not contribute content to the P2P network, and place an unequal
-burden available upload resources.
-</p>
-
-<p>
-It's easy to gain access to the complete content of the P2P network -
-simply download one of the many popular P2P clients.
-</p>
-
-<br>
-
-<h3>Get Shareaza Now</h3>
-
-<p>
-Shareaza is the most powerful and feature-rich P2P client for Windows.
-And it's completely free. No ads, no spyware, no guilting you to upgrade to
-a commercial version.
-</p>
-
-<font size="1">
-<a href="http://shareaza.sourceforge.net/?id=download">
-<img src="http://shareaza.sourceforge.net/images/iconshadowed.gif" width="42" height="50" align="absmiddle" hspace="5" border="0"></a>
-<a href="http://shareaza.sourceforge.net/?id=download">Download now at the Shareaza web site</a>
-</font>
-
-<br><br>
-
-</font>
-</td>
-<td width="32">&nbsp;</td>
-</table>
-
+				<span style="font-size: 10px; position: relative; right: -5px;">
+					<a href="http://shareaza.sourceforge.net/?id=download"><img src="http://shareaza.sourceforge.net/images/iconshadowed.gif" width="42" height="50" align="middle" border="0" alt="S logo"/></a>
+					<span style="position: relative; right: -5px; bottom: -5px;"><a href="http://shareaza.sourceforge.net/?id=download">Download now at the Shareaza web site</a></span>
+				</span>
+				<br/><br/>
+			</td>
+		</tr>
+	</table>
 </td>
 </tr>
-<tr height="48">
-<td align="right" valign="center" bgcolor="#BE0000" style="border-style: solid; border-width: 1px 0px 0px 0px; border-color: black;">
-<font face="Verdana" size="1" color="maroon">Shareaza v<% Version %>&nbsp;&nbsp;</font>
-</td>
+<tr style="height: 48px;">
+	<td valign="middle" class="footer">
+		<span style="margin-right: 8px;">Shareaza v<% Version %></span>
+	</td>
 </tr>
 </table>
 
