--- a/shareaza/Res/Busy.htm
+++ b/shareaza/Res/Busy.htm
@@ -1,2 +1,10 @@
 503 Busy
-There are too many active uploads, and no space in the queues.
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/2002/REC-xhtml1-20020801/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+<title>Busy</title>
+</head>
+<body>
+<h4 style="text-align: center; margin-top: 75px;">There are too many active uploads, and no space in the queues.</h4>
+</body>
+</html>
