--- a/shareaza/Res/HashMismatch.htm
+++ b/shareaza/Res/HashMismatch.htm
@@ -1,2 +1,10 @@
 404 URN Mismatch
-The URN of the requested object did not match the URN in the request.
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/2002/REC-xhtml1-20020801/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+<title>URN Mismatch</title>
+</head>
+<body>
+<h4 style="text-align: center; margin-top: 75px;">The URN of the requested object did not match the URN in the request.</h4>
+</body>
+</html>
