XHTML 1.0 transitional -> XHTML 1.0 strict
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6444 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Res/Browser.htm
+++ b/shareaza/Res/Browser.htm
@@ -1,5 +1,5 @@
 403 Please Share
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/2002/REC-xhtml1-20020801/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/2002/REC-xhtml1-20020801/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
  <title>Please Share: Shareaza</title>
@@ -27,6 +27,7 @@ a:hover {
 	font-weight: bold;
 	color: yellow;
 	}
+.header img { border: 0px; }
 .footer {
 	border: 0px;
 	border-top: 1px solid black;
@@ -43,7 +44,7 @@ a:hover {
 
 <tr style="height: 48px;">
 	<td class="header">
-		<a href="http://shareaza.sourceforge.net/"><img src="http://shareaza.sourceforge.net/images/barlogo.gif" width="240" height="48" border="0" align="middle" alt="SHAREAZA" /></a>
+		<a href="http://shareaza.sourceforge.net/"><img src="http://shareaza.sourceforge.net/images/barlogo.gif" width="240" height="48" style="vertical-align: middle;" alt="SHAREAZA" /></a>
 		<span style="position: relative; top: 3px;">Please Share</span>
 	</td>
 </tr>
@@ -69,7 +70,7 @@ a:hover {
 				</p>
 
 				<span style="font-size: 10px; position: relative; right: -5px;">
-					<a href="http://shareaza.sourceforge.net/?id=download"><img src="http://shareaza.sourceforge.net/images/iconshadowed.gif" width="42" height="50" align="middle" border="0" alt="S logo"/></a>
+					<a href="http://shareaza.sourceforge.net/?id=download"><img src="http://shareaza.sourceforge.net/images/iconshadowed.gif" width="42" height="50" style="vertical-align: middle; border: 0px;" alt="S logo"/></a>
 					<span style="position: relative; right: -5px; bottom: -5px;"><a href="http://shareaza.sourceforge.net/?id=download">Download now at the Shareaza web site</a></span>
 				</span>
 				<br/><br/>
