added translation needed notices to outdated remotes
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6807 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Remote/es-mx/home.htm
+++ b/Remote/es-mx/home.htm
@@ -70,6 +70,17 @@
 					</tr>
 				</table>
 			</form>
+<!--Translators Needed Notice -->
+			<table style="margin-left: auto; margin-right: auto; padding: 0px; border-collapse: collapse;">
+					<tr><th style="padding: 2px; border: solid 1px gray; background: #E0E0E0; white-space: nowrap; text-align: center; font-size: 11px;">Translators Needed</th></tr>
+					<tr><td style="white-space: nowrap; background: #fff; border: 1px #bbb solid; padding: 2px;">This remote is out-of-date and needs to be translated again.<br/><br/>
+					If you are fluent in both <b>English</b> and <b>Spanish (Mexico)</b> and wish
+					to help with Shareaza™ translations,<br/>please visit
+					our <a href="http://shareaza.sourceforge.net/help/?translationforum">Translation Forum</a> to let us know, and read the <a href="http://shareaza.sourceforge.net/help/?translate">Translator
+					documentation</a> to get started. 
+					</td></tr>
+				</table>
+<!--/Translators Needed Notice -->
 		</td>
 	</tr>
 </table>
