--- a/Remote/sv/downloadsFooter.htm
+++ b/Remote/sv/downloadsFooter.htm
@@ -1,14 +1,13 @@
-﻿</td> </tr> </table>
-<br>
-<form method="get" action="newdownload" ID="Form1">
-	<table align="center">
-		<tr>
-			<td>Nedladdningsmagnet:</td>
-			<td><input type="text" name="uri" size="50"></td>
-			<td>
-				<input type="submit" value="Kör">
-			</td>
-		</tr>
-	</table>
-</form>
-</td> </tr> </table>
+﻿
+<!--downloadsFooter-->
+		<br/>
+		<form method="get" action="newdownload">
+			<div>
+				<label>Ladda ner magnet:</label>
+				<input type="text" name="uri" size="50" />
+				<input type="submit" value="Gå" />
+			</div>
+		</form>
+	</div>
+</div>
+<!--/downloadsFooter-->
