--- a/Remote/sv/downloadsHeader.htm
+++ b/Remote/sv/downloadsHeader.htm
@@ -1,28 +1,15 @@
-﻿		<table width="95%" align="center" cellspacing="0" cellpadding="0">
-			<tr>
-				<td align="center">
-					<table width="100%" cellspacing="0">
-						<tr>
-							<td class="tabedg">&nbsp;</td>
-							<td class="tab"><a class="tab" href="Home">Hem</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="search">Sök</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tabsel">Nedladdningar</td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="uploads">Uppladdningar</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="network">Nätverk</a></td>
-							<td class="tabedg">&nbsp;</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-			<tr>
-				<td class="frame">
-					<table width="100%" align="center" cellspacing="0" cellpadding="0" ID="Table1">
-						<tr>
-							<td align="center">
-								<table width="100%" cellspacing="0" ID="Table2">
-									<tr>
-										<td class="tabedg">&nbsp;</td>
+﻿<!-- downloadsHeader -->
+		<!-- tabs -->
+		<div class="poetry">
+			<ul class="tabs">
+				<li class="inactive"><a href="home" class="noline">Hem</a></li>
+				<li class="inactive"><a href="search" class="noline">Sök</a></li>
+				<li class="active"><a href="downloads" class="noline">Nedladdningar</a></li>
+				<li class="inactive"><a href="uploads" class="noline">Uppladdningar</a></li>
+				<li class="inactive"><a href="network" class="noline">Nätverk</a></li>
+			</ul>
+		</div>
+		<!-- /tabs -->
+			<div id="frame">
+				<ul class="tabs" style="text-align:left;">
+<!-- /downloadsHeader -->
