--- a/Remote/sv/networkHeader.htm
+++ b/Remote/sv/networkHeader.htm
@@ -1,22 +1,17 @@
-﻿		<table width="95%" align="center" cellspacing="0" cellpadding="0">
-			<tr>
-				<td align="center">
-					<table width="100%" cellspacing="0">
-						<tr>
-							<td class="tabedg">&nbsp;</td>
-							<td class="tab"><a class="tab" href="Home">Hem</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="search">Sök</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="downloads">Nedladdningar</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="uploads">Uppladdningar</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tabsel">Nätverk</td>
-							<td class="tabedg">&nbsp;</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-			<tr>
-				<td class="frame">
+﻿<!-- networkHeader -->
+		<!-- tabs -->
+		<div class="poetry">
+			<ul class="tabs">
+				<li class="inactive"><a href="home" class="noline">Hem</a></li>
+				<li class="inactive"><a href="search" class="noline">Sök</a></li>
+				<li class="inactive"><a href="downloads" class="noline">Nedladdningar</a></li>
+				<li class="inactive"><a href="uploads" class="noline">Uppladdningar</a></li>
+				<li class="active"><a href="network" class="noline">Nätverk</a></li>
+			</ul>
+		</div>
+		<!-- /tabs -->
+			<div id="frame">
+			<div id="functions">
+						<a href="?refresh=<%= random %>">Uppdatera sidan</a>
+			</div>
+<!-- /networkHeader -->
