--- a/Remote/sv/searchNew.htm
+++ b/Remote/sv/searchNew.htm
@@ -1,34 +1,19 @@
-﻿<td class="tabsel">New Search</td>
-<td class="tabedg">&nbsp;</td>
-</tr> </table> </td> </tr>
-<tr>
-	<td class="frame">
-		<div>
-			För att starta en ny sökning: skriv ditt sökkriterium i rutan nedanför och klicka på <b>Starta
-				sökning</b>. Om du vill begränsa din sökning till en bestämd filtyp, välj den från listan.
+﻿										<li class="active"><a class="noline" href="?id=0">Ny sökning</a></li>
+								</ul>
+<div style="border: 1px #000 solid;padding: 5px;">
+	<p>För att starta en ny sökning, skriv din sökterm i sökrutan och klicka på <strong>Börja sökning</strong>. Om du vill begränsa sökningen till en viss filtyp, välj den från listan (rekommenderas).</p>
+
+	<form method="get" action="newsearch">
+		<div style="text-align:right; width: 30em;">
+			<label>Sök efter:</label>
+				<input type="text" name="search" class="regularinput" /><br/>
+				<label>Filtyp:</label>
+
+				<select name="schema" class="regularinput">
+					<option value="">Alla filtyper</option>
+					<%= schema_option_list %>
+				</select><br />
+
+				<input type="submit" value="Börja sökning" />
 		</div>
-		<form method="get" action="newsearch">
-			<table align="center">
-				<tr>
-					<td>Sök efter:</td>
-					<td><input type="text" name="search" size="30"></td>
-				</tr>
-				<tr>
-					<td>Filtyp:</td>
-					<td>
-						<select name="schema">
-							<option value="">Valfri filtyp</option>
-							<%= schema_option_list %>
-						</select>
-					</td>
-				</tr>
-				<tr>
-					<td></td>
-				</tr>
-				<tr>
-					<td colspan="2" align="center">
-						<input type="submit" value="Starta sökning">
-					</td>
-				</tr>
-			</table>
-		</form>
+	</form>
