--- a/Remote/nl/downloadsHeader.htm
+++ b/Remote/nl/downloadsHeader.htm
@@ -1,4 +1,4 @@
-<!-- downloadsHeader -->
+﻿<!-- downloadsHeader -->
 		<!-- tabs -->
 		<div class="poetry">
 			<ul class="tabs">
@@ -6,7 +6,7 @@
 				<li class="inactive"><a href="search" class="noline">Zoeken</a></li>
 				<li class="active"><a href="downloads" class="noline">Downloads</a></li>
 				<li class="inactive"><a href="uploads" class="noline">Uploads</a></li>
-				<li class="inactive"><a href="network" class="noline">Netwerken</a></li>
+				<li class="inactive"><a href="network" class="noline">Netwerk</a></li>
 			</ul>
 		</div>
 		<!-- /tabs -->
