--- a/Remote/nl/downloadsSource.htm
+++ b/Remote/nl/downloadsSource.htm
@@ -1,4 +1,4 @@
-									<tr>
+﻿									<tr>
 										<td class="filename"><div style="margin-left: 1em;"><%= source_caption %></div></td>
 										<td><%= source_volume %></td>
 										<td></td>
@@ -6,7 +6,7 @@
 										<td><%= source_agent %></td>
 										<td><%= source_status %></td>
 										<td>
-											<a href="?modify_id=<%= source_id %>&modify_action=access">Verbreken</a> -
+											<a href="?modify_id=<%= source_id %>&modify_action=access">Toegang</a> -
 											<a href="?modify_id=<%= source_id %>&modify_action=forget">Vergeten</a>
 										</td>
 									</tr>
