--- a/Remote/nl/searchTop.htm
+++ b/Remote/nl/searchTop.htm
@@ -1,14 +1,14 @@
-
+﻿
 <!-- searchTop -->
-										<li class="active"><a class="noline" href="?id=0">Nieuwe Zoekopdracht</a></li>
+										<li class="active"><a class="noline" href="?id=0">Nieuwe zoekopdracht</a></li>
 								</ul>
 
 <div style="border: 1px #000 solid;padding: 5px;" id="content">
-	<div id="functions"><a href="?id=<%= search_id %>&amp;refresh=<%= random %>">Pagina Verversen</a> - 
+	<div id="functions"><a href="?id=<%= search_id %>&amp;refresh=<%= random %>">Pagina herladen</a> - 
 <%? searching %>
-												<a href="?id=<%= search_id %>&amp;stop=1"><b>Stoppen met Zoeken</b></a> -
+												<a href="?id=<%= search_id %>&amp;stop=1"><b>Stop zoeken</b></a> -
 <%?%>
-												<a href="?close=<%= search_id %>">Zoekvenster Sluiten</a>
+												<a href="?close=<%= search_id %>">Zoekopdracht sluiten</a>
 	</div>
 		<div id="filters">
 										<form method="get" action="">
@@ -16,7 +16,7 @@
 											<input type="hidden" name="setfilter" value="1" />
 											<label>Filter:</label>
 											<input type="text" name="filter" value="<%= search_filter %>" size="20" />
-											<input type="submit" value="Filter" />
+											<input type="submit" value="Filter:" />
 
 										</form>
 		</div>
