--- a/Remote/nl/uploadsHeader.htm
+++ b/Remote/nl/uploadsHeader.htm
@@ -1,4 +1,4 @@
-<!-- uploadsHeader -->
+﻿<!-- uploadsHeader -->
 		<!-- tabs -->
 		<div class="poetry">
 			<ul class="tabs">
@@ -6,12 +6,12 @@
 				<li class="inactive"><a href="search" class="noline">Zoeken</a></li>
 				<li class="inactive"><a href="downloads" class="noline">Downloads</a></li>
 				<li class="active"><a href="uploads" class="noline">Uploads</a></li>
-				<li class="inactive"><a href="network" class="noline">Netwerken</a></li>
+				<li class="inactive"><a href="network" class="noline">Netwerk</a></li>
 			</ul>
 		</div>
 		<!-- /tabs -->
 			<div id="frame">
 			<div id="functions">
-						<a href="?refresh=<%= random %>">Pagina Verversen</a>
+						<a href="?refresh=<%= random %>">Pagina herladen</a>
 			</div>
 <!-- /uploadsHeader -->
