--- a/Remote/nl/uploadsQueueStart.htm
+++ b/Remote/nl/uploadsQueueStart.htm
@@ -1,21 +1,21 @@
-<!-- uploadsQueueStart -->
+﻿<!-- uploadsQueueStart -->
 <%? !queue_expanded %>
 					<h4><a class="noline" href="?queue_expand=<%= queue_id %>">+ <%= queue_caption %></a>
 <%? queue_transfers %>
-					(<%= queue_transfers %> actief / <%= queue_queued %> queued, using <%= queue_bandwidth %>)
+					(<%= queue_transfers %> actief / <%= queue_queued %> in wachtrij, aan <%= queue_bandwidth %>)
 <%?%>
 					</h4>
 <%?%><%? queue_expanded %>
 					<h4><a class="noline" href="?queue_collapse=<%= queue_id %>">- <%= queue_caption %></a>
 <%? queue_transfers %>
-					(<%= queue_transfers %> actief / <%= queue_queued %> queued, using <%= queue_bandwidth %>)
+					(<%= queue_transfers %> actief / <%= queue_queued %> in wachtrij, aan <%= queue_bandwidth %>)
 <%?%>
 					</h4>
 				<div class="centertable">
 					<table>
 						<tr>
-							<th>Bestandsnaam</th>
-							<th>User</th>
+							<th>Bestand</th>
+							<th>Gebruiker</th>
 							<th>Grootte</th>
 							<th>Snelheid</th>
 							<th>User-Agent</th>
