commented out reference to non-existant js file. Possible bug fix - confirmation required
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7025 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Remote/chs/commonHeader.htm
+++ b/Remote/chs/commonHeader.htm
@@ -5,7 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Shareaza P2P 远程访问</title>
 		<link rel="stylesheet" type="text/css" href="images/shareaza.css" media="screen" />
-		<script src="images/shareaza.js" type="text/javascript" />
+	<!--	<script src="images/shareaza.js" type="text/javascript" />	-->
 		<style type="text/css">
 			body,div,span,p,td { font-family: Verdana; font-size: 8pt; }
 			body { margin: 0px 0px 0px 0px; padding:0px 2px 2em 2px; background-color: #fff; color: #000; }
