--- a/Remote/nl/commonHeader.htm
+++ b/Remote/nl/commonHeader.htm
@@ -5,7 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Shareaza's P2P Web Interface</title>
 		<link rel="stylesheet" type="text/css" href="images/shareaza.css" media="screen" />
-		<script src="images/shareaza.js" type="text/javascript" />
+	<!--	<script src="images/shareaza.js" type="text/javascript" />	-->
 		<style type="text/css">
 			body,div,span,p,td { font-family: Verdana; font-size: 8pt; }
 			body { margin: 0px 0px 0px 0px; padding:0px 2px 2em 2px; background-color: #fff; color: #000; }
