--- a/Remote/en/searchTop.htm
+++ b/Remote/en/searchTop.htm
@@ -1,6 +1,6 @@
 ﻿
 <!-- searchTop -->
-										<li class="active"><a class="noline" href="?id=0">New Search</a></li>
+										<li class="active" style="border-bottom: 1px solid #000;"><a class="noline" href="?id=0">New Search</a></li>
 								</ul>
 
 <div style="border: 1px #000 solid;padding: 5px;" id="content">
